# recorder

./: .clang-format  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  README.md  WinCapture.cpp  WinCapture.h  main.cpp  miniaudio.h  start.ps1  tests.cpp
src/: Api.cpp  Api.hpp  Api.ixx  ChunkedRingBuffer.hpp  Controller.cpp  Controller.hpp  FileUploader.hpp  FileUploader.ixx  IAudioSource.ixx  Models.hpp  Models.ixx  OggOpusWriter.hpp  ProcessLister.cpp  ProcessLister.hpp  ProcessLister.ixx  ProcessRecorder.hpp  ProcessRecorder.ixx  RecordManager.ixx  Recorder.cpp  Recorder.hpp  Recorder.ixx  ThreadSafeQueue.hpp  ThreadSafeQueue.ixx  Velopack.cpp  Velopack.ixx  VelopackMy.cpp  VelopackMy.hpp  WinCapture.cpp  WinCapture.h  debug.hpp  hwid.cpp  hwid.hpp  logging.cpp  logging.hpp  main.cpp  util.cpp  util.hpp
src/audio/: ActivityMonitor.hpp  AudioDeviceMonitor.hpp  AudioDeviceMonitor.ixx  AudioSource.hpp  AudioSource.ixx  OggOpusEncoder.hpp  OggOpusEncoder.ixx  RingBuffer.hpp  RingBuffer.ixx  SignalMonitor.hpp  SignalMonitor.ixx  WasapiAudioSource.hpp  WasapiCapture.hpp  WinAudioSource.hpp  WinAudioSource.ixx  WinCapture.hpp  audio_core.hpp  win-capture.hpp
